--- a/.air.toml
+++ b/.air.toml
@@ -1,5 +1,4 @@
 root = "."
-testdata_dir = "testdata"
 tmp_dir = "tmp"
 
 [build]
@@ -14,7 +13,7 @@ tmp_dir = "tmp"
   follow_symlink = false
   full_bin = ""
   include_dir = []
-  include_ext = ["go", "tpl", "tmpl", "html", "templ"]
+  include_ext = ["go","templ"]
   include_file = []
   kill_delay = "0s"
   log = "build-errors.log"
@@ -23,19 +22,13 @@ tmp_dir = "tmp"
   pre_cmd = ["templ generate", "make tailwind"]
   rerun = false
   rerun_delay = 500
-  send_interrupt = false
-  stop_on_root = false
-
+ 
 [color]
   app = ""
   build = "yellow"
   main = "magenta"
   runner = "green"
   watcher = "cyan"
-
-[log]
-  main_only = false
-  time = false
 
 [misc]
   clean_on_exit = false
